<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo1"
        android:id="@+id/logo2"
        />



    <TextView
        android:layout_width="match_parent"
        android:layout_marginTop="25dp"
        android:layout_height="match_parent"
        android:layout_alignEnd="@id/linear"
        android:layout_alignRight="@id/linear"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@id/logo2"

        android:paddingTop="20dp"
        android:text="Summary Bot"
        android:textColor="#0D5397"
        android:textSize="30sp"
        android:textStyle="bold" />


    <ScrollView

        android:layout_width="match_parent"

        android:layout_alignParentBottom="true"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
        <!-- Email Label -->
        <EditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:drawableLeft="@drawable/ic_person_black_24dp"
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/ic_person_black_24dp"
            android:textSize="14sp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"


            android:layout_marginBottom="15dp" />
        <!-- Password Label -->
        <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="Password"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/ic_lock_black_24dp"
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/ic_lock_black_24dp"
            android:textSize="14sp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="30dp"/>
        <!-- Signup Button -->
        <Button
            android:id="@+id/btn_signup"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_gravity="center"

            android:text="Create Account"
            android:textColor="@color/White"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textStyle="normal"
            android:background="@drawable/rounded5"
            android:layout_marginBottom="30dp"/>
        <TextView
            android:id="@+id/login_page"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"

            android:gravity="center"

            android:text="Already a member? Login"
            android:textSize="16dip" />
    </LinearLayout>
    </ScrollView>

</RelativeLayout>