...
        android:padding="10dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"/>

            <Button
            android:id="@+id/voice"
            android:layout_width="match_parent"
            android:layout_height="50dp"

            android:text="VOICE"
                android:layout_gravity="center"
            android:background="@drawable/rounded"
                android:drawableLeft="@drawable/voice"
                android:padding="10dp"
                android:gravity="center"
            android:textColor="@color/Black"
...
